some style for the practice_show. still the text overflow needs to be fixed

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -26,6 +26,19 @@
   font-size: 61px;
   color: white;
   background: linear-gradient(208.57deg, #FD8281 14.54%, #FE8451 90.24%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.big-btn{
+  width: 80%;
+  margin-bottom: 0;
+}
+
+.center{
+  text-align: center;
+  margin: 0 auto;
 }
 
 .botom-right-corner{
